--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <div id="app"></div>
+    <button id="btn2">Add Me</button>
     <button id="btn">Click Me</button>
     <script src="my.js"></script>
 </body>
